# Context-Role-Oriented-Foraging-Chain-Swarm

./: .gitignore  README.md  initialize_prey.sh  robotModelExtension.ecore  startup.sh
Contexts/: LICENSE  Project.toml  README.md
Contexts/swarmElementLoop/: ChainCROM.jl  MAPE.jl  flockingSpass.jl  functions.jl  main.jl  test_kaputt.jl
Contexts/test/: swarmTestHead.jl  swarmTestIsolated.jl  swarmTestJoinerTailIntermediateExploration.jl  swarmTestMethods.jl  swarmTestSingleRobotChain.jl  time.txt
messages/: main.py
messages/modelUtils/: robotSupervisor.py
models/: chain_as_a_whole.json  chain_chainparts.json  chain_crom_micro(14).json  chain_crom_micro(16).json  chain_crom_micro(8).json  statechart_chain_scenario_withAND-super-states.asta
models/BehavioralDescription/: TransportChainBehavior_Head.svg.bak  TransportChainBehavior_Intermediate.svg.bak  TransportChainBehavior_SingleRobotChain.svg.bak  TransportChainBehavior_TopLevel.svg.bak
models/ExecutionTimePlots/: time1000full.txt  time1500cold.txt  time1500full.txt  time1500warm.txt
pyecoregen/: pyvenv.cfg
rosWorkspace/: bridge_example.argos
rosWorkspace/src/argos3-ros2-bridge/: CMakeLists.txt  README.md  package.xml
rosWorkspace/src/argos3-ros2-bridge/msg/: Blob.msg  BlobList.msg  Grip.msg  Led.msg  LightList.msg  Load.msg  Packet.msg  PacketList.msg  ProximityList.msg  Signal.msg
rosWorkspace/src/argos3-ros2-bridge/plugins/: CMakeLists.txt
rosWorkspace/src/argos3-ros2-bridge/plugins/bridge/: CMakeLists.txt  argos_ros_bridge.cpp  argos_ros_bridge.h
rosWorkspace/src/argos3-ros2-bridge/plugins/loop_functions/foraging_loop_functions/: CMakeLists.txt  foraging_loop_functions.cpp  foraging_qt_user_functions.cpp
runtimemodel/: main.py
runtimemodel/model/: __init__.py  robotModel.py
runtimemodel/modelImpl/: robotModelImpl.py
runtimemodel/modelUtils/: robotSupervisor.py
webapp/: swarmDisplay.py
webapp/templates/: swarmDisplay.html
